Fix hiding right column on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,6 +14,7 @@ body {
   font-weight: 400;
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 h1,
@@ -194,9 +195,11 @@ main {
 /* Responsive layout - when the screen is less than 1024px wide, make the two
  * columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 1024px) {
-  .column-left,
-  .column-right {
+  .column-left {
     width: 100%;
-    padding: 0;
+  }
+
+  .column-right {
+    display: none;
   }
 }
